--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,30 +24,30 @@ jobs:
       matrix:
         include:
           #  两行一组，删除不需要的版本
-          - platform: ds1621p
-            version: 7.0.1-42218
-          - platform: ds1621p
-            version: 7.1.0-42661
+#           - platform: ds1621p
+#             version: 7.0.1-42218
+#           - platform: ds1621p
+#             version: 7.1.0-42661
 
-          - platform: ds2422p
-            version: 7.0.1-42218
+#           - platform: ds2422p
+#             version: 7.0.1-42218
 
-          - platform: ds3615xs
-            version: 6.2.4-25556
-          - platform: ds3615xs
-            version: 7.0.1-42218
-          - platform: ds3615xs
-            version: 7.1.0-42661
+#           - platform: ds3615xs
+#             version: 6.2.4-25556
+#           - platform: ds3615xs
+#             version: 7.0.1-42218
+#           - platform: ds3615xs
+#             version: 7.1.0-42661
 
-          - platform: ds3617xs
-            version: 7.0.1-42218
-          - platform: ds3617xs
-            version: 7.1.0-42661
+#           - platform: ds3617xs
+#             version: 7.0.1-42218
+#           - platform: ds3617xs
+#             version: 7.1.0-42661
 
-          - platform: ds3622xsp
-            version: 7.0.1-42218
-          - platform: ds3622xsp
-            version: 7.1.0-42661
+#           - platform: ds3622xsp
+#             version: 7.0.1-42218
+#           - platform: ds3622xsp
+#             version: 7.1.0-42661
 
           - platform: ds918p
             version: 6.2.4-25556
@@ -56,15 +56,15 @@ jobs:
           - platform: ds918p
             version: 7.1.0-42661
 
-          - platform: ds920p
-            version: 7.0.1-42218
-          - platform: ds920p
-            version: 7.1.0-42661
+#           - platform: ds920p
+#             version: 7.0.1-42218
+#           - platform: ds920p
+#             version: 7.1.0-42661
 
-          - platform: dva3221
-            version: 7.0.1-42218
-          - platform: dva3221
-            version: 7.1.0-42661
+#           - platform: dva3221
+#             version: 7.0.1-42218
+#           - platform: dva3221
+#             version: 7.1.0-42661
 
     steps:
       - name: 检出项目文件
@@ -143,6 +143,12 @@ jobs:
           sed -i 's/debian:10-slim/debian:8-slim/g' global_config.json
           ./redpill_tool_chain.sh build ${{matrix.platform}}-${{matrix.version}}
 
+
+
+      - name: addalx
+        run: |
+          ./redpill_tool_chain.sh add https://raw.githubusercontent.com/pocopico/rp-ext/master/alx/rpext-index.json
+          
       - name: 编译引导镜像
         run: |
           ./redpill_tool_chain.sh auto ${{matrix.platform}}-${{matrix.version}}
