--- a/ds918p_user_config.json
+++ b/ds918p_user_config.json
@@ -7,5 +7,11 @@
     },
     "synoinfo": {},
     "ramdisk_copy": {},
-    "extensions": []
+    "extensions": [],
+
+    "grub": {
+        "base_cmdline": {
+            "console": "ttyS4,115200n8"
+        }
+    }
 }
