--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,43 +24,41 @@ jobs:
       matrix:
         include:
           #  两行一组，删除不需要的版本
-#           - platform: ds1621p
-#             version: 7.0.1-42218
-#           - platform: ds1621p
-#             version: 7.1.0-42661
-
-#           - platform: ds2422p
-#             version: 7.0.1-42218
-
-#           - platform: ds3615xs
-#             version: 6.2.4-25556
-#           - platform: ds3615xs
-#             version: 7.0.1-42218
-#           - platform: ds3615xs
-#             version: 7.1.0-42661
-
-#           - platform: ds3617xs
-#             version: 7.0.1-42218
-#           - platform: ds3617xs
-#             version: 7.1.0-42661
-
-#           - platform: ds3622xsp
-#             version: 7.0.1-42218
-#           - platform: ds3622xsp
-#             version: 7.1.0-42661
-
-          - platform: ds918p
+# i3 4dai
+          - platform: ds3615xs
             version: 6.2.4-25556
-          - platform: ds918p
+          - platform: ds3615xs
             version: 7.0.1-42218
-          - platform: ds918p
+          - platform: ds3615xs
             version: 7.1.0-42661
 
+# xe  Intel Xeon D-1531
+#           - platform: ds3617xs
+#             version: 7.0.1-42218
+#           - platform: ds3617xs
+#             version: 7.1.0-42661
+
+# Intel Xeon D-1531
+#           - platform: ds3622xsp
+#             version: 7.0.1-42218
+#           - platform: ds3622xsp
+#             version: 7.1.0-42661
+
+# J3455
+          # - platform: ds918p
+          #   version: 6.2.4-25556
+          # - platform: ds918p
+          #   version: 7.0.1-42218
+          # - platform: ds918p
+          #   version: 7.1.0-42661
+
+# Intel Celeron J4125
 #           - platform: ds920p
 #             version: 7.0.1-42218
 #           - platform: ds920p
 #             version: 7.1.0-42661
 
+# Intel Atom C3538 
 #           - platform: dva3221
 #             version: 7.0.1-42218
 #           - platform: dva3221
