--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,18 +39,18 @@ jobs:
 #             version: 7.1.0-42661
 
 # Intel Xeon D-1531
-          - platform: ds3622xsp
-            version: 7.0.1-42218
-          - platform: ds3622xsp
-            version: 7.1.0-42661
+          # - platform: ds3622xsp
+          #   version: 7.0.1-42218
+          # - platform: ds3622xsp
+          #   version: 7.1.0-42661
 
 # J3455
-          # - platform: ds918p
-          #   version: 6.2.4-25556
-          # - platform: ds918p
-          #   version: 7.0.1-42218
-          # - platform: ds918p
-          #   version: 7.1.0-42661
+          - platform: ds918p
+            version: 6.2.4-25556
+          - platform: ds918p
+            version: 7.0.1-42218
+          - platform: ds918p
+            version: 7.1.0-42661
 
 # Intel Celeron J4125
 #           - platform: ds920p
